--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ h1 {
     box-shadow: 0 6px 15px rgba(36, 37, 38, 0.08);
     margin-top: 4em;
     margin-bottom: 4em;
+    cursor: pointer;
 }
 
 .reset-bt {
@@ -127,6 +128,7 @@ h1 {
     box-shadow: 0 6px 15px rgba(36, 37, 38, 0.08);
     margin-top: 4em;
     margin-bottom: 4em;
+    cursor: pointer;
 }
 
 .balls ul {
