--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
 }
 
 .numbers-wrapper h2 {
@@ -156,15 +157,14 @@ h1 {
 }
 
 .star {
-    display: inline-flex;
     background-color: transparent;
     padding: 15px;
     color: var(--color-primary);
     border: 2px solid var(--color-primary);
     margin: .5em 0;
     font-size: 3rem;
-    width: 55px;
     border-radius: 10px;
+    display: flex;
     justify-content: center;
     font-weight: 800;
 }
