--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h1 {
     margin: .5em 0;
     font-size: 3rem;
     border-radius: 100%;
-    width: 55px;
+    min-width: 55px;
     display: flex;
     justify-content: center;
     font-weight: 800;
@@ -167,6 +167,7 @@ h1 {
     display: flex;
     justify-content: center;
     font-weight: 800;
+    min-width: 55px;
 }
 
 
