--- a/style.css
+++ b/style.css
@@ -52,13 +52,26 @@ table {
 }
 
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
 
 body {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     height: 100vh;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: var(--color-contrast);
     color: var(--color-primary);
     font-size: 16px;
@@ -82,17 +95,35 @@ h1 {
 
 .content-area {
     width: 100%;
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .numbers-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 100%;
 }
 
@@ -110,7 +141,8 @@ h1 {
     font-size: 1.2rem;
     font-weight: 600;
     text-transform: uppercase;
-    box-shadow: 0 6px 15px rgba(36, 37, 38, 0.08);
+    -webkit-box-shadow: 0 6px 15px rgba(36, 37, 38, 0.08);
+            box-shadow: 0 6px 15px rgba(36, 37, 38, 0.08);
     margin-top: 4em;
     margin-bottom: 4em;
     cursor: pointer;
@@ -126,15 +158,21 @@ h1 {
     font-size: 1.2rem;
     font-weight: 600;
     text-transform: uppercase;
-    box-shadow: 0 6px 15px rgba(36, 37, 38, 0.08);
+    -webkit-box-shadow: 0 6px 15px rgba(36, 37, 38, 0.08);
+            box-shadow: 0 6px 15px rgba(36, 37, 38, 0.08);
     margin-top: 4em;
     margin-bottom: 4em;
     cursor: pointer;
 }
 
 .balls ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .ball {
@@ -145,15 +183,24 @@ h1 {
     font-size: 3rem;
     border-radius: 100%;
     min-width: 55px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-weight: 800;
 }
 
 .stars {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .star {
@@ -164,18 +211,28 @@ h1 {
     margin: .5em 0;
     font-size: 3rem;
     border-radius: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-weight: 800;
     min-width: 55px;
+    height: 50px;
 }
 
 
 @media (min-width: 62em) {
 
     .balls ul {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
     }
 
     .ball {
@@ -183,8 +240,13 @@ h1 {
     }
 
     .stars {
-        flex-direction: row;
-        justify-content: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 
      .star {
