--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
     -ms-flex-direction: column;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -292,7 +292,7 @@ h1 {
 }
 
 .star {
-    background-color: red;
+    background-color:transparent;
     padding: 15px;
     color: var(--color-primary);
     border: 2px solid var(--color-primary);
@@ -312,6 +312,9 @@ h1 {
 
 
 @media (min-width: 62em) {
+    body {
+        height: 100vh;
+    }
 
     .balls ul {
         display: -webkit-box;
